General optimisation update: - made an abstract class for the scenes to reduce repeated methods. - removed commented out methods in all classes. - updated runway such that adding the obstacle only sets the calculation conditions. - you can run calculations independently