@@ -1,64 +1,45 @@
 package org.universityofsouthampton.runwayredeclarationtool.UI;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
-import javafx.scene.Scene;
-import javafx.scene.control.*;
+import javafx.scene.control.Button;
+import javafx.scene.control.Label;
+import javafx.scene.control.ScrollPane;
+import javafx.scene.control.TextField;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.VBox;
-import javafx.scene.paint.Color;
 import javafx.scene.text.Font;
-import javafx.scene.text.FontWeight;
 import javafx.scene.text.Text;
-import javafx.stage.Modality;
-import javafx.stage.Screen;
 import javafx.stage.Stage;
-import org.kordamp.ikonli.javafx.FontIcon;
 import org.kordamp.ikonli.materialdesign.MaterialDesign;
 import org.universityofsouthampton.runwayredeclarationtool.MainApplication;
 import org.universityofsouthampton.runwayredeclarationtool.airport.Airport;
 import org.universityofsouthampton.runwayredeclarationtool.airport.Obstacle;
 import org.universityofsouthampton.runwayredeclarationtool.airport.Runway;
 
-import java.util.ArrayList;
+public class ObstacleListScene extends BaseScene {
 
-public class ObstacleListScene extends VBox {
-    /**
-     * Scroll pane to display the obstacles of a selected runway
-     */
-    private final ScrollPane currentObstacleScroll = new ScrollPane();
-
-    /**
-     * Scroll pane to display the obstacles that can be added to the runway
-     */
-    private final ScrollPane otherObstaclesScroll = new ScrollPane();
-
-    /**
-     * ArrayList of obstacles from XML
-     */
-    private ArrayList<Obstacle> otherObstacles;
-
-    /**
-     * Obstacle thats currently in the selection box
-     */
-    private Obstacle selectedObstacle;
-
-    private final MainApplication app;
-    private final Airport currentAirport;
-    private final Runway currentRunway;
+    private final ScrollPane currentObstacleScroll = new ScrollPane(); // Scroll pane to display the obstacles of a selected runway
+    private final ScrollPane otherObstaclesScroll = new ScrollPane(); // Scroll pane to display the obstacles that can be added to the runway
+    private ArrayList<Obstacle> otherObstacles; // ArrayList of obstacles from XML
+    private Obstacle selectedObstacle; // Obstacle that's currently in the selection box
+    private final Airport currentAirport; // Airport that was selected to access its properties
+    private final Runway currentRunway; // Runway selected to access it's properties
 
     public ObstacleListScene(MainApplication app, Airport airport, Runway runway) {
-        setAlignment(Pos.TOP_CENTER);
-
         this.app = app;
-        currentAirport = airport;
-        currentRunway = runway;
-//        currentObstacles = runway.getObstacles();
-        otherObstacles = app.getObstacles();
+        this.currentAirport = airport;
+        this.currentRunway = runway;
+        this.otherObstacles = app.getObstacles();
+        setAlignment(Pos.TOP_CENTER);
+        setPadding(new Insets(20));
+        setSpacing(10);
 
-        // Initalise selectedObstacle if theres a pre-determined obstacle in the runway
+        // Initialise selectedObstacle if there's a pre-determined obstacle in the runway
         if (!runway.getObstacles().isEmpty()) {
-            selectedObstacle = runway.getObstacles().getFirst();
+            selectedObstacle = runway.getObstacles().get(0);
         }
 
         var title = new Text("Obstacle Update");
@@ -72,45 +53,21 @@ public class ObstacleListScene extends VBox {
         Text title3 = new Text("Other obstacles ")  ;
         title.setFont(Font.font("Arial", 20));
 
-        setPadding(new Insets(20));
-        setSpacing(10);
-
-
-        Button backButton = new Button();
-        styleButton(backButton, MaterialDesign.MDI_KEYBOARD_RETURN, "Return");
-        backButton.setOnAction(e -> {
-            // If theres no selected obstacles go back
-            if (currentRunway.getObstacles().isEmpty()) {
-                app.displayRunwayConfigScene(airport,currentRunway);
-                app.updateXMLs();
-            } else {
-                promptAddBPV();
-            }
-        });
-
-        Button createButton = new Button();
-        styleButton(createButton, MaterialDesign.MDI_PLUS_BOX, "Create");
-        createButton.setOnAction(e -> promptCreateObstacleForm());
-
         this.currentObstacleScroll.setFitToWidth(true);
         this.currentObstacleScroll.setPrefSize(700, 500);
-//        this.currentObstacles = currentRunway.getObstacles();
         this.otherObstaclesScroll.setFitToWidth(true);
         this.otherObstaclesScroll.setPrefSize(700, 500);
         this.otherObstacles = app.getObstacles();
         updateObstaclesList();
 
-        Button editButton = new Button();
-        styleButton(editButton, MaterialDesign.MDI_WRENCH,"Configure");
-        editButton.setOnAction(e -> {
-            if (this.selectedObstacle != null) {
-                promptEDITObstacleForm();
-            } else {
-                System.out.println("Nothing Selected!");
-            }
+        HBox buttonBox = new HBox(10);
+        buttonBox.getChildren().addAll(addButtons());
 
-        });
+        this.getChildren().addAll(title,title2,this.currentObstacleScroll,title3,this.otherObstaclesScroll,buttonBox);
+    }
 
+    @Override
+    ArrayList<Button> addButtons() {
         Button addButton = new Button();
         styleButton(addButton, MaterialDesign.MDI_PLUS, "Add");
         addButton.setOnAction(e -> {
@@ -119,7 +76,7 @@ public class ObstacleListScene extends VBox {
             } else {
                 if (!this.currentRunway.getObstacles().isEmpty()) {
                     // Replace the current Obstacle with selected one
-                    Obstacle existingObstacle = this.currentRunway.getObstacles().getFirst();
+                    Obstacle existingObstacle = this.currentRunway.getObstacles().get(0);
                     this.otherObstacles.add(existingObstacle);
 
                     // update runway object
@@ -129,22 +86,6 @@ public class ObstacleListScene extends VBox {
                 this.otherObstacles.remove(this.selectedObstacle);
                 updateObstaclesList();
             }
-        });
-
-        Button deleteButton = new Button();
-        styleButton(deleteButton, MaterialDesign.MDI_DELETE, "Delete");
-        deleteButton.setOnAction(e -> {
-            if (this.selectedObstacle == null) {
-                System.out.println("Nothing Selected!");
-            } else if  (this.currentRunway.getObstacles().isEmpty() || !this.currentRunway.getObstacles().contains(this.selectedObstacle)) {
-                this.otherObstacles.remove(this.selectedObstacle);
-                updateObstaclesList();
-                app.updateXMLs();
-            } else {
-                System.out.println("Obstacle is in current obstacles!");
-            }
-
-
         });
 
         Button removeButton = new Button();
@@ -162,37 +103,79 @@ public class ObstacleListScene extends VBox {
             }
         });
 
-        HBox buttonBox = new HBox(10);
-        buttonBox.getChildren().addAll(addButton, removeButton, createButton, editButton, deleteButton, backButton);
+        Button createButton = new Button();
+        styleButton(createButton, MaterialDesign.MDI_PLUS_BOX, "Create");
+        createButton.setOnAction(e -> promptCreateObstacleForm());
+        
+        Button editButton = new Button();
+        styleButton(editButton, MaterialDesign.MDI_WRENCH,"Configure");
+        editButton.setOnAction(e -> {
+            if (this.selectedObstacle != null) {
+                promptEDITObstacleForm();
+            } else {
+                System.out.println("Nothing Selected!");
+            }
+        });
 
-        this.getChildren().addAll(title,title2,this.currentObstacleScroll,title3,this.otherObstaclesScroll,buttonBox);
+        Button deleteButton = new Button();
+        styleButton(deleteButton, MaterialDesign.MDI_DELETE, "Delete");
+        deleteButton.setOnAction(e -> {
+            if (this.selectedObstacle == null) {
+                System.out.println("Nothing Selected!");
+            } else if  (this.currentRunway.getObstacles().isEmpty() || !this.currentRunway.getObstacles().contains(this.selectedObstacle)) {
+                this.otherObstacles.remove(this.selectedObstacle);
+                updateObstaclesList();
+                app.updateXMLs();
+            } else {
+                System.out.println("Obstacle is in current obstacles!");
+            }
+        });
+
+        Button backButton = new Button();
+        styleButton(backButton, MaterialDesign.MDI_KEYBOARD_RETURN, "Return");
+        backButton.setOnAction(e -> {
+            // If theres no selected obstacles go back
+            if (currentRunway.getObstacles().isEmpty()) {
+                app.displayRunwayConfigScene(currentAirport,currentRunway);
+                app.updateXMLs();
+            } else {
+                promptAddBPV();
+            }
+        });
+
+        return new ArrayList<>(
+            Arrays.asList(addButton, removeButton, createButton, editButton, deleteButton, backButton));
     }
 
-    private void styleButton(Button button, MaterialDesign icon, String text) {
-        button.setStyle("-fx-background-color: #333; -fx-text-fill: white;");
-        button.setFont(Font.font("Arial", FontWeight.NORMAL, 16));
-        button.setPrefWidth(120);
-        button.setOnMouseEntered(e -> button.setStyle("-fx-background-color: #555; -fx-text-fill: white;"));
-        button.setOnMouseExited(e -> button.setStyle("-fx-background-color: #333; -fx-text-fill: white;"));
-        styleIcon(button, icon, text);
-    }
+    private void updateObstaclesList() {
+        var currentObstaclesBox = new VBox();
+        var otherObstaclesBox = new VBox();
+        currentObstaclesBox.setSpacing(5);
+        otherObstaclesBox.setSpacing(5);
 
-    static void styleIcon(Button button, MaterialDesign icon, String text) {
-        FontIcon buttonIcon = new FontIcon(icon);
-        buttonIcon.setIconColor(Color.WHITE);
-        button.setGraphic(buttonIcon);
-        button.setContentDisplay(ContentDisplay.GRAPHIC_ONLY);
+        this.currentRunway.getObstacles().forEach(obstacle -> {
+            var name = obstacle.getName();
+            var obstacleButton = new Button(name);
+            styleButton(obstacleButton, MaterialDesign.MDI_EYE, name);
+            obstacleButton.setOnMouseClicked(event -> {
+                setSelectedObstacle(obstacle);
+                System.out.println("Currently selected: " + getSelectedObstacle().getName());
+            });
+            currentObstaclesBox.getChildren().add(obstacleButton);
+        });
+        this.currentObstacleScroll.setContent(currentObstaclesBox);
 
-        Label label = new Label(text);
-        label.setFont(Font.font("Arial", FontWeight.NORMAL, 16));
-        label.setTextFill(Color.WHITE);
-        label.setAlignment(Pos.CENTER);
-
-        HBox hbox = new HBox(buttonIcon, label);
-        hbox.setAlignment(Pos.CENTER_LEFT);
-        hbox.setSpacing(10);
-
-        button.setGraphic(hbox);
+        this.otherObstacles.forEach(obstacle -> {
+            var name = obstacle.getName();
+            var obstacleButton = new Button(name);
+            styleButton(obstacleButton, MaterialDesign.MDI_EYE, name);
+            obstacleButton.setOnMouseClicked(event -> {
+                setSelectedObstacle(obstacle);
+                System.out.println("Currently selected: " + getSelectedObstacle().getName());
+            });
+            otherObstaclesBox.getChildren().add(obstacleButton);
+        });
+        this.otherObstaclesScroll.setContent(otherObstaclesBox);
     }
 
     private void promptCreateObstacleForm() {
@@ -262,10 +245,7 @@ public class ObstacleListScene extends VBox {
 
         form.getChildren().addAll(nameLabel, nameInput, heightLabel, heightInput, distFromThreLabel, distFromThreInput, distFromCentLabel, distFromCentInput, submitButton, cancelButton);
 
-        Stage dialogStage = new Stage();
-        dialogStage.initModality(Modality.APPLICATION_MODAL);
-        dialogStage.setTitle("Create Obstacle");
-        dialogGenerator(form, dialogStage);
+        dialogGenerator(form, "Create Obstacle");
     }
 
     private void promptEDITObstacleForm() {
@@ -345,10 +325,7 @@ public class ObstacleListScene extends VBox {
 
         form.getChildren().addAll(nameLabel, nameInput, heightLabel, heightInput, distFromThreLabel, distFromThreInput, distFromCentLabel, distFromCentInput, submitButton, cancelButton);
 
-        Stage dialogStage = new Stage();
-        dialogStage.initModality(Modality.APPLICATION_MODAL);
-        dialogStage.setTitle("Edit Obstacle");
-        dialogGenerator(form, dialogStage);
+        dialogGenerator(form, "Edit Obstacle");
     }
 
     private void promptAddBPV() {
@@ -359,7 +336,6 @@ public class ObstacleListScene extends VBox {
         Label BPVLabel = new Label("Blast Protection Value:");
         TextField BPVInput = new TextField();
         styleTextField(BPVInput);
-
 
         Button submitButton = new Button();
         styleButton(submitButton, MaterialDesign.MDI_PLUS_BOX, "Create");
@@ -387,9 +363,8 @@ public class ObstacleListScene extends VBox {
                     Stage stage = (Stage) form.getScene().getWindow();
 
                     // update the runway object to run calculations to display in the config runway scene
-                    currentRunway.removeObstacle(selectedObstacle);
-                    currentRunway.addObstacle(selectedObstacle);
                     currentRunway.setBlastProtectionValue(BPVInt);
+                    currentRunway.runCalculations();
                     app.displayRunwayConfigScene(currentAirport,currentRunway);
                     app.updateXMLs();
 
@@ -405,52 +380,7 @@ public class ObstacleListScene extends VBox {
 
         form.getChildren().addAll(BPVLabel, BPVInput, submitButton, cancelButton);
 
-        Stage dialogStage = new Stage();
-        dialogStage.initModality(Modality.APPLICATION_MODAL);
-        dialogStage.setTitle("Set Blast Protection Value");
-        dialogGenerator(form, dialogStage);
-    }
-
-    static void dialogGenerator(VBox form, Stage dialogStage) {
-        dialogStage.setScene(new Scene(form));
-
-        double centerX = Screen.getPrimary().getVisualBounds().getWidth() / 2;
-        double centerY = Screen.getPrimary().getVisualBounds().getHeight() / 2;
-
-        dialogStage.setX(centerX - 150);
-        dialogStage.setY(centerY - 100);
-        dialogStage.showAndWait();
-    }
-
-    private void updateObstaclesList() {
-        var currentObstaclesBox = new VBox();
-        var otherObstaclesBox = new VBox();
-        currentObstaclesBox.setSpacing(5);
-        otherObstaclesBox.setSpacing(5);
-
-        this.currentRunway.getObstacles().forEach(obstacle -> {
-            var name = obstacle.getName();
-            var obstacleButton = new Button(name);
-            styleButton(obstacleButton, MaterialDesign.MDI_EYE, name);
-            obstacleButton.setOnMouseClicked(event -> {
-                setSelectedObstacle(obstacle);
-                System.out.println("Currently selected: " + getSelectedObstacle().getName());
-            });
-            currentObstaclesBox.getChildren().add(obstacleButton);
-        });
-        this.currentObstacleScroll.setContent(currentObstaclesBox);
-
-        this.otherObstacles.forEach(obstacle -> {
-            var name = obstacle.getName();
-            var obstacleButton = new Button(name);
-            styleButton(obstacleButton, MaterialDesign.MDI_EYE, name);
-            obstacleButton.setOnMouseClicked(event -> {
-                setSelectedObstacle(obstacle);
-                System.out.println("Currently selected: " + getSelectedObstacle().getName());
-            });
-            otherObstaclesBox.getChildren().add(obstacleButton);
-        });
-        this.otherObstaclesScroll.setContent(otherObstaclesBox);
+        dialogGenerator(form, "Set Blast Protection Value");
     }
 
     public void setSelectedObstacle(Obstacle selectedObstacle) {
@@ -459,33 +389,5 @@ public class ObstacleListScene extends VBox {
 
     public Obstacle getSelectedObstacle() {
         return this.selectedObstacle;
-    }
-
-    private void styleTextField(TextField textField) {
-        textField.setStyle("-fx-background-color: white; -fx-text-fill: black;");
-        textField.setFont(Font.font("Arial", 16));
-    }
-
-    private void showErrorDialog(String message) {
-        Stage dialog = new Stage();
-        dialog.initModality(Modality.APPLICATION_MODAL);
-
-        VBox dialogVbox = new VBox(20);
-
-        Text errorMessage = new Text(message);
-        Button okButton = new Button();
-        styleButton(okButton, MaterialDesign.MDI_CHECK, "OK");
-
-        okButton.setOnAction(e -> dialog.close());
-        dialogVbox.setPadding(new Insets(20));
-
-        dialogVbox.getChildren().addAll(errorMessage, okButton);
-        Scene dialogScene = new Scene(dialogVbox);
-        dialog.setScene(dialogScene);
-        dialog.sizeToScene();
-        dialog.centerOnScreen();
-        dialogVbox.setAlignment(Pos.CENTER);
-
-        dialog.showAndWait();
     }
 }
