@@ -7,16 +7,14 @@ import java.util.ArrayList;
  */
 public class Runway {
 
-    private String degrees;
-    private String direction;
     private String name; // Runway name
-    private int runwayLength;
+    private final String direction; // Runway direction
     String logicalRunway1, logicalRunway2;
     private String logicalRunway; //runway name if used from the other side. 09L -> 27R
-    private int TORA; // Take-Off Run Available (same as length of runway)
-    private int TODA; // Take-Off Distance Available
-    private int ASDA; // Accelerate-Stop Distance Available
-    private int LDA; // Landing Distance Available
+    private final int TORA; // Take-Off Run Available (same as length of runway)
+    private final int TODA; // Take-Off Distance Available
+    private final int ASDA; // Accelerate-Stop Distance Available
+    private final int LDA; // Landing Distance Available
 
     private int newTORA; // Calculated Take-Off Run Available
     private int newTODA; // Calculated Take-Off Distance Available
@@ -24,9 +22,9 @@ public class Runway {
     private int newLDA; // Calculated Landing Distance Available
     private final int displacedThreshold; // Displaced Threshold
     private final ArrayList<Obstacle> obstacles; // ArrayList of Obstacles
-    private int RESA = 240; // Runway End Safety Area
+    private final int RESA = 240; // Runway End Safety Area
     private int TOCS = 50; // Take-Off Climb Surface
-    private int ALS = 50; // Approach Landing Surface
+    private final int ALS = 50; // Approach Landing Surface
     private final int stripEnd = 60;
     private int blastProtectionValue;
     private boolean landingOver;
@@ -36,23 +34,6 @@ public class Runway {
     private int stopway;
     private int clearway;
 
-//    public Runway(String degrees, String direction, int TORA, int TODA, int ASDA, int LDA, int displacedThreshold) {
-//        this.degrees = degrees;
-//        this.direction = direction;
-//        this.name = degrees + direction;
-//
-//        if(!isValidName(name)|| TORA < 0 || TODA < 0 || ASDA < 0 || LDA < 0 || displacedThreshold < 0){
-//            throw new IllegalArgumentException("Invalid runway parameters");
-//        }
-//
-//        this.TORA = TORA;
-//        this.TODA = TODA;
-//        this.ASDA = ASDA;
-//        this.LDA = LDA;
-//        this.displacedThreshold = displacedThreshold;
-//
-//        this.obstacles = new ArrayList<>();
-//    }
     public Runway(String name,String direction, int stopway, int clearway, int TORA, int displacedThreshold){
         this.name = name;
         this.direction = direction;
@@ -68,17 +49,20 @@ public class Runway {
             throw new IllegalArgumentException("Invalid runway parameters");
         }
     }
-    public boolean checkValidParameters(){
+
+    // Validators for the runway object
+    public boolean isValidName(String name){  // Checks name credentials
+        String regex = "^(0[1-9]|1[0-9]|2[0-9]|3[0-6])(L|R|C)?$";
+        return name.matches(regex);
+    }
+    public boolean checkValidParameters(){ // Checks parameters
         boolean greaterThanZero = (TORA<0 || TODA <0 || ASDA <0 || LDA<0 || displacedThreshold <0 || stopway <0 || clearway<0);
         boolean checkTODA = (TODA == TORA + clearway && TODA > TORA);
         boolean checkASDA = (ASDA == TORA + stopway || ASDA == LDA + stopway);
         return (greaterThanZero && checkTODA && checkASDA);
     }
 
-    public ArrayList<Obstacle> getObstacles(){
-        return this.obstacles;
-    }
-
+    // Removing obstacle AND adding obstacle changes calculation conditions
     public void addObstacle(Obstacle obstacle) {
         if(obstacle == null){
             throw new IllegalArgumentException("Invalid obstacle");
@@ -95,13 +79,7 @@ public class Runway {
             this.takeoffAway = false;
             this.landingOver = false;
         }
-        runCalculations();
-    }
-
-    public void runCalculations() {
-        System.out.println("Added obstacle, running calculations...");
-        this.calculateLDA();
-        this.calculateTORA_ASDA_TODA();
+        System.out.println("Added Obstacle! Setting calculation conditions");
     }
 
     public void removeObstacle(Obstacle obstacle) {
@@ -116,188 +94,20 @@ public class Runway {
         System.out.println("Removed Obstacle, reverted to original Values!");
     }
 
-    @Override
-    public String toString() {
-        return "Runway{" +
-                "type='" + '\'' +
-                ", name='" + name + '\'' +
-                ", TORA=" + TORA +
-                ", TODA=" + TODA +
-                ", ASDA=" + ASDA +
-                ", LDA=" + LDA +
-                ", displacedThreshold=" + displacedThreshold +
-                //
-                '}';
-    }
-
-    public String getName() {
-        return name;
-    }
-
-    public void setTORA(int TORA) {
-        this.TORA = TORA;
-    }
-
-    public void setTODA(int TODA) {
-        this.TODA = TODA;
-    }
-
-    public void setASDA(int ASDA) {
-        this.ASDA = ASDA;
-    }
-
-    public void setRESA(int RESA) {
-        this.RESA = RESA;
-    }
-
-    public void setTOCS(int TOCS) {
-        this.TOCS = TOCS;
-    }
-
-    public void setALS(int ALS) {
-        this.ALS = ALS;
-    }
-
-    public void setBlastProtectionValue(int BPV) {
-        blastProtectionValue = BPV;
-    }
-
-    public void setLDA(int LDA) {
-        this.LDA = LDA;
-    }
-
-    //getter and setter functions for stopway and clearway
-    public void setStopway(int stopway){
-        this.stopway = stopway;
-    }
-    public void setClearway(int clearway){
-        this.clearway = clearway;
-    }
-    public int getStopway(){
-        return stopway;
-    }
-    public int getClearway(){
-        return clearway;
-    }
-    public int getTORA() {
-        return TORA;
-    }
-    public int getTODA() {
-        return TODA;
-    }
-
-    public int getASDA() {
-        return ASDA;
-    }
-
-    public int getLDA() {
-        return LDA;
-    }
-
-    public int getDisplacedThreshold() {
-        return displacedThreshold;
-    }
-
-    public int getNewTORA() {
-        return newTORA;
-    }
-
-    public int getNewTODA() {
-        return newTODA;
-    }
-
-    public int getNewASDA() {
-        return newASDA;
-    }
-
-    public int getNewLDA() {
-        return newLDA;
-    }
-
-    public int getBlastPr() {
-        return blastProtectionValue;
-    }
-
-    public boolean isValidName(String name){
-        String regex = "^(0[1-9]|1[0-9]|2[0-9]|3[0-6])(L|R|C)?$";
-        return name.matches(regex);
-    }
-    public void setName(String name) throws Exception{
-        if(!isValidName(name)){
-            throw new Exception("Invalid name");
-        }
-        else this.name = name;
-        setLogicalRunways(name);
-    }
-
-    //get logical runways out of one runway name.
-    public void setLogicalRunways(String runwayName) {
-        int runwayNumber = Integer.parseInt(runwayName);
-
-        int oppositeRunwayNumber = runwayNumber + 18;
-        if (oppositeRunwayNumber > 36) {
-            oppositeRunwayNumber -= 36;
-        }
-
-        // Convert back to strings, ensuring they are formatted with leading zeros if necessary
-        logicalRunway1 = String.format("%02d", runwayNumber);
-        logicalRunway2 = String.format("%02d", oppositeRunwayNumber);
-    }
-
-    // Getters for the logical runways
-    public String getLogicalRunway1() {
-        return logicalRunway1;
-    }
-
-    public String getLogicalRunway2() {
-        return logicalRunway2;
-    }
-
-    public void recalculateLDA(Obstacle obstacle) {
-        int obstacleHeight = obstacle.getHeight();
-        int distanceFromThreshold = obstacle.getDistanceFromThreshold();
-
-        // ALS (Approach Landing Surface) ratio
-        final int ALS_RATIO = 50;
-
-        // Calculate distance needed to clear obstacle, includes height of obstacle times ALS ratio
-        int distanceToClearObstacle = obstacleHeight * ALS_RATIO;
-
-        // Minimum RESA (Runway End Safety Area) distance
-        final int MINIMUM_RESA = 240;
-
-        final int STRIP_END = 60;
-
-        // Calculate total distance to be subtracted from LDA
-        int totalDistanceToSubtract = distanceFromThreshold + distanceToClearObstacle + MINIMUM_RESA + STRIP_END;
-
-        // Check if obstacle within RESA distance from threshold
-        if (distanceFromThreshold < MINIMUM_RESA) {
-            // If obstacle within RESA distance from threshold, entire runway is unavailable
-            this.LDA = 0;
+    public void runCalculations() { // Only call when blast protection value is set
+        if (obstacles.size() > 0) {
+            System.out.println("Running calculations...");
+            this.calculateLDA(obstacles.get(0));
+            this.calculateTORA_ASDA_TODA(obstacles.get(0));
         } else {
-            // Subtract total distance to clear the obstacle from LDA
-            this.LDA = Math.max(this.LDA - totalDistanceToSubtract, 0);
+            System.out.println("No obstacle present!");
         }
     }
 
-    private void calculateLDA() {
-
-        Obstacle obstacle = obstacles.getFirst();
-
+    private void calculateLDA(Obstacle obstacle) {
         if (landingOver) {
-            int temporaryThreshold;
             int obstacleHeight = obstacle.getHeight();
-
-
-            if (obstacleHeight * ALS >= RESA) {
-                temporaryThreshold = obstacleHeight * ALS;
-            } else {
-                temporaryThreshold = RESA;
-            }
-            System.out.println("Obstacle Height: " + obstacleHeight);
-            System.out.println("ALS: " + ALS);
-            System.out.println("RESA: " + RESA);
+            int temporaryThreshold = Math.max(obstacleHeight * ALS, RESA);
 
             if ((temporaryThreshold + stripEnd) >= blastProtectionValue) {
                 this.newLDA = LDA - obstacle.getDistanceFromThreshold() - temporaryThreshold - stripEnd;
@@ -306,68 +116,36 @@ public class Runway {
             }
             this.newTODA = this.TORA + stopway;
             this.newASDA = this.TORA + clearway;
-
         }
         else if (landingToward) {
-
             this.newLDA = obstacle.getDistanceFromThreshold() - RESA - stripEnd;
             this.newTODA = TORA;
         }
         System.out.println("Successfully calculated LDA");
     }
 
-
-    private void calculateTORA_ASDA_TODA() {
-
-        Obstacle obstacle = obstacles.getFirst();
-
+    private void calculateTORA_ASDA_TODA(Obstacle obstacle) {
         if (takeoffToward) {
-            int temporaryThreshold;
             int obstacleHeight = obstacle.getHeight();
-
-            if (obstacleHeight * TOCS >= RESA) {
-                temporaryThreshold = obstacle.getHeight() * TOCS;
-            } else {
-                temporaryThreshold = RESA;
-            }
-            System.out.println("Obstacle Height: " + obstacleHeight);
-            System.out.println("TOCS: " + TOCS);
-            System.out.println("RESA: " + RESA);
+            int temporaryThreshold = Math.max(obstacleHeight * TOCS, RESA);
 
             this.newTORA = obstacle.getDistanceFromThreshold() + displacedThreshold - temporaryThreshold - stripEnd;
             this.newASDA = newTORA;
             this.newTODA = newTORA;
         }
-
         else if (takeoffAway) {
-
             this.newTORA = TORA - blastProtectionValue - obstacle.getDistanceFromThreshold() - displacedThreshold ;
             this.newASDA = newTORA + stopway;
             this.newTODA = newTORA + clearway;
-
-            System.out.println("BPV: " + blastProtectionValue);
         }
         System.out.println("Successfully calculated TORA, TODA and ASDA");
-    }
-
-
-    private void setDirection () {
-        this.direction = direction;
-    }
-
-    public String getDirection() {
-        return this.direction;
-    }
-
-    public String getDegrees() {
-        return this.degrees;
     }
 
     public String getCalculationBreakdown() {
         StringBuilder breakdown = new StringBuilder();
 
         if (!obstacles.isEmpty()) {
-            Obstacle obstacle = obstacles.getFirst();
+            Obstacle obstacle = obstacles.get(0);
             breakdown.append("Calculation Breakdown:\n");
 
             if (landingOver || landingToward) {
@@ -400,6 +178,88 @@ public class Runway {
         }
 
         return breakdown.toString();
+    }
+
+    // Setter + getter methods
+    public String getName() {
+        return name;
+    }
+    public void setName(String name) throws Exception{
+        if(!isValidName(name)){
+            throw new Exception("Invalid name");
+        }
+        else this.name = name;
+        setLogicalRunways(name);
+    }
+    public String getDirection() {
+        return this.direction;
+    }
+    public void setLogicalRunways(String runwayName) {
+        int runwayNumber = Integer.parseInt(runwayName);
+
+        int oppositeRunwayNumber = runwayNumber + 18;
+        if (oppositeRunwayNumber > 36) {
+            oppositeRunwayNumber -= 36;
+        }
+
+        // Convert back to strings, ensuring they are formatted with leading zeros if necessary
+        logicalRunway1 = String.format("%02d", runwayNumber);
+        logicalRunway2 = String.format("%02d", oppositeRunwayNumber);
+    }
+    public String getLogicalRunway1() {
+        return logicalRunway1;
+    }
+
+    public String getLogicalRunway2() {
+        return logicalRunway2;
+    }
+    public int getTORA() {
+        return TORA;
+    }
+    public int getTODA() {
+        return TODA;
+    }
+    public int getASDA() {
+        return ASDA;
+    }
+    public int getLDA() {
+        return LDA;
+    }
+    public int getDisplacedThreshold() {
+        return displacedThreshold;
+    }
+    public ArrayList<Obstacle> getObstacles(){
+        return this.obstacles;
+    }
+    public int getNewTORA() {
+        return newTORA;
+    }
+    public int getNewTODA() {
+        return newTODA;
+    }
+    public int getNewASDA() {
+        return newASDA;
+    }
+    public int getNewLDA() {
+        return newLDA;
+    }
+    public int getBlastProtectionValue() {
+        return blastProtectionValue;
+    }
+    public void setBlastProtectionValue(int BPV) {
+        blastProtectionValue = BPV;
+    }
+    public void setStopway(int stopway){
+        this.stopway = stopway;
+    }
+    public void setClearway(int clearway){
+        this.clearway = clearway;
+    }
+    public int getStopway(){
+        return stopway;
+    }
+    public int getClearway(){
+        return clearway;
     }
 
 }
